# op-dbus-p1

./: .ayeignore  .bashrc  .env.example  .gitignore  .gitmodules  ANTIGRAVITY-AUTH.md  ANTIGRAVITY-INTEGRATION.md  COMPREHENSIVE-DOC-ANALYSIS.md  CONTEXT-CONTINUATION.md  CONTEXT-HANDOFF-LXC-TOOLS.md  CONTEXT-HANDOFF.md  Cargo.toml  DOCUMENTATION-ANALYSIS-REPORT.md  FIX-FRONTEND-404.md  GEMINI.md  GOOGLE-LOGIN.md  IMPLEMENTATION-CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LLM-SYSTEM-PROMPT-COMPLETE.txt  MCP-PROXY-FIX.md  QUICK-FIX-LLM.md  README.md  REMOVE-LAZY.md  SKILL-IMPLEMENTATION.md  VERIFICATION_REPORT.md  antigravity-mcp-agents-config.json  antigravity-mcp-config.json  check_ovs.sh  code_review_methodology.md  code_review_methodology_rust.md  code_review_report.md  code_review_summary.md  code_review_toolkit.md  cursor-mcp-config.json  cursor-mcp-config.json.bk  disaster.md  dist  doc-review-contex.txt  gemini-mcp-config.json  (+11 more)
crates/mcp-proxy/: Cargo.toml
crates/mcp-proxy/src/: main.rs
crates/op-agents/: Cargo.toml
crates/op-agents/src/: agent_catalog.rs  agent_registry.rs  dbus_service.rs  lib.rs  router.rs
crates/op-blockchain/: Cargo.toml
crates/op-blockchain/src/: blockchain.rs  btrfs_numa_integration.rs  footprint.rs  lib.rs  retention.rs  snapshot.rs  streaming_blockchain.rs
crates/op-cache/: Cargo.toml  build.rs
crates/op-cache/proto/: op_cache.proto
crates/op-cache/src/: agent.rs  agent_registry.rs  btrfs_cache.rs  capability_resolver.rs  lib.rs  numa.rs  orchestrator.rs  pattern_tracker.rs  snapshot_manager.rs  workflow_cache.rs  workflow_executor.rs  workflow_tracker.rs  workstack_cache.rs
crates/op-chat/: Cargo.toml  build.rs
crates/op-chat/proto/: agents.proto  orchestration.proto
crates/op-chat/src/: actor.rs  agent_tools.rs  chat_loop.rs  forced_execution.rs  forced_tool_pipeline.rs  grpc_client.rs  handler.rs  hybrid_executor.rs  intent_executor.rs  lib.rs  llm.rs  nl_admin.rs  orchestrated_executor.rs  router.rs  session.rs  system_prompt.rs  tool_executor.rs  tool_loader.rs  tool_loader.rs.stub  tool_orchestrator.rs  types.rs
crates/op-core/: Cargo.toml
crates/op-core/src/: config.rs  connection.rs  error.rs  execution.rs  lib.rs  lib.rs.patch  message.rs  security.rs  self_identity.rs  traits.rs  types.rs
crates/op-deployment/: Cargo.toml
crates/op-deployment/src/: lib.rs
crates/op-dynamic-loader/: Cargo.toml
crates/op-dynamic-loader/src/: dynamic_registry.rs  error.rs  execution_aware_loader.rs  lib.rs  loading_strategy.rs
crates/op-execution-tracker/: Cargo.toml
crates/op-execution-tracker/src/: execution_context.rs  execution_tracker.rs  lib.rs  metrics.rs  telemetry.rs
crates/op-http/: Cargo.toml
crates/op-http/src/: lib.rs  middleware.rs  router.rs  server.rs  tls.rs
crates/op-inspector/: Cargo.toml
crates/op-inspector/src/: introspective_gadget.rs  lib.rs
crates/op-introspection/: Cargo.toml
crates/op-introspection/src/: cache.rs  indexer.rs  indexer_manager.rs  lib.rs  parser.rs  scanner.rs
crates/op-jsonrpc/: Cargo.toml
crates/op-jsonrpc/src/: lib.rs  nonnet.rs  ovsdb.rs  protocol.rs  server.rs
crates/op-llm/: Cargo.toml
crates/op-llm/scripts/: authenticate-chatbot.js  extract-cursor-auth.js  record-login.js  spoof-auth.js
crates/op-llm/src/: anthropic.rs  antigravity.rs  antigravity_replay.rs  chat.rs  gemini.rs  gemini_cli.rs  headless_oauth.rs  huggingface.rs  lib.rs  ollama.rs  perplexity.rs  provider.rs  pty_bridge.rs
crates/op-mcp/: Cargo.toml  Cargo.toml.grpc-additions  README.md  build.rs
crates/op-mcp-aggregator/: CLEANUP-CONTEXT-AWARE.md  Cargo.toml  README.md
crates/op-mcp-aggregator/examples/: aggregator.json
crates/op-mcp-aggregator/src/: aggregator.rs  cache.rs  client.rs  compact.rs  config.rs  context.rs  groups.rs  groups.rs.patch  lib.rs  profile.rs
crates/op-mcp-old/: Cargo.toml
crates/op-mcp-old/src/: dbus_indexer.rs  embedded_agents.rs  http_server.rs  hybrid_dbus_bridge.rs  hybrid_scanner.rs  introspective_gadget.rs  lib.rs  main.rs  mcp_discovery.rs  orchestrator_refactored.rs  plugin_tool_bridge.rs  resources.rs  system_introspection.rs  tool_registry.rs  workflow_nodes.rs  workflows.rs
crates/op-mcp.backup/: Cargo.toml  README.md  SETUP.md  mcp-config.example.json  mcp-config.json
crates/op-mcp.backup/docs/: ARCHITECTURE.md
crates/op-mcp.backup/src/: external_client.rs  http_server.rs  lib.rs  main.rs  server.rs
crates/op-mcp/proto/: internal_agents.proto  mcp.proto
crates/op-mcp/src/: agents_main.rs  agents_server.rs  agents_server.rs.patch  builtin_trait_agents.rs  compact.rs  compact_main.rs  config.rs  external_client.rs  lazy_tools.rs  lib.rs  lib.rs.grpc-additions  main.rs  mod.rs  mod.rs.patch  protocol.rs  request_context.rs  request_handler.rs  resources.rs  router.rs  server.rs  sse.rs  tool_adapter.rs  tool_adapter_orchestrated.rs  tool_registry.rs  trait_agent_executor.rs
crates/op-mcp/tests/: integration_test.rs
crates/op-ml/: Cargo.toml
crates/op-ml/src/: config.rs  lib.rs
crates/op-network/: Cargo.toml
crates/op-network/src/: lib.rs  openflow.rs  ovs_capabilities.rs  ovs_error.rs  ovs_netlink.rs  ovsdb.rs  plugin.rs  proxmox.rs  rtnetlink.rs
crates/op-plugins/: Cargo.toml
crates/op-plugins/src/: auto_create.rs  builtin.rs  default_registry.rs  dynamic_loading.rs  lib.rs  plugin.rs  registry.rs  state.rs  systemd.rs
crates/op-state/: Cargo.toml
crates/op-state-store/: Cargo.toml
crates/op-state-store/src/: disaster_recovery.rs  error.rs  execution_job.rs  lib.rs  metrics.rs  plugin_schema.rs  redis_stream.rs  sqlite_store.rs  state_store.rs
crates/op-tools/: Cargo.toml  Cargo.toml.patch
crates/op-web/: Cargo.toml  setup-antigravity-agents.sh  setup-antigravity-mcp.sh  setup-antigravity-remote.sh
crates/op-web-ui/: Cargo.toml  index.html  styles.css
crates/op-workflows/: Cargo.toml
op-dbus-service/: Cargo.toml
op-dbus-service/src/: chat.rs  main.rs  skills.rs  state.rs  tracker.rs
streaming-logs/: Cargo.toml
streaming-logs/src/: main.rs
streaming-logs/static/: admin.html
(+532 files in other folders)
