[workspace]
resolver = "2"
members = [
    "crates/op-core",
    "crates/op-tools",
    "crates/op-chat",
    "crates/op-mcp",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["op-dbus contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/op-dbus-v2-clean"
homepage = "https://example.com"

[workspace.dependencies]
# Workspace members
op-core = { path = "crates/op-core", version = "0.3.0" }
op-tools = { path = "crates/op-tools", version = "0.3.0" }
op-chat = { path = "crates/op-chat", version = "0.3.0" }
op-mcp = { path = "crates/op-mcp", version = "0.3.0" }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "sync"] }
futures = "0.3"
async-trait = { version = "0.1", workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# HTTP/Web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# D-Bus
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
zbus_xml = "4.0"

# Databases
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "json"] }
redis = { version = "0.25", features = ["tokio-comp"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
lru = "0.12"
regex = "1"
lazy_static = "1.4"

# Crypto
sha2 = "0.10"
md5 = "0.7"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Monitoring
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
prometheus = { version = "0.13", features = ["process"] }
