[workspace]
resolver = "2"
members = [
    "op-dbus-service",
    "crates/op-core",
    "crates/op-tools",
    "crates/op-introspection",
    "crates/op-chat",
    "crates/op-http",
    "crates/op-web",
    "crates/op-web-ui",
    "crates/op-cache",
    "crates/op-state",
    "crates/op-state-store",
    "crates/op-jsonrpc",
    "crates/op-llm",
    "crates/op-network",
    "crates/op-inspector",
    "crates/op-agents",
    "crates/op-plugins",
    "crates/op-workflows",
    "crates/op-ml",
    "crates/op-blockchain",
    "crates/op-deployment",
    "crates/op-mcp",
    "crates/op-mcp-aggregator",
    "crates/mcp-proxy",
    "crates/op-execution-tracker",
    "crates/op-dynamic-loader",
    "streaming-logs",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["op-dbus contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal Crates
op-core = { path = "crates/op-core" }
op-tools = { path = "crates/op-tools" }
op-chat = { path = "crates/op-chat" }
op-http = { path = "crates/op-http" }
op-state = { path = "crates/op-state" }
op-llm = { path = "crates/op-llm" }
op-network = { path = "crates/op-network" }
op-agents = { path = "crates/op-agents" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# DBus
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
zbus_xml = "5.0" # Latest available

# Web/HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "compression-br", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Observability
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
prometheus = { version = "0.13", features = ["process"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.38", features = ["serialize"] }
libc = "0.2"
regex = "1"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
lru = "0.12"
num_cpus = "1.16"
tar = "0.4"
flate2 = "1"

# Networking
rtnetlink = "0.14"
gethostname = "0.5"

# Crypto
sha2 = "0.10"
md5 = "0.7"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Databases
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "json"] }
redis = { version = "0.25", features = ["tokio-comp"] }
rusqlite = { version = "0.32", features = ["bundled"] }
