[package]
name = "op-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure agent registry and D-Bus agent implementations for op-dbus-v2"

[[bin]]
name = "dbus-agent"
path = "src/bin/dbus-agent.rs"

[dependencies]
# Internal crates
op-core = { workspace = true }
op-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# D-Bus
zbus = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
shell-words = "1.1"

axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
