[package]
name = "op-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BTRFS-based caching with NUMA awareness and snapshot management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
sha2 = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
# nix = { version = "0.27", features = ["fs", "mount"] }  # FORBIDDEN - do not add