[package]
name = "op-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chat functionality and LLM integration for op-dbus-v2"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# D-Bus support
zbus = { workspace = true }

# Internal dependencies
op-core = { path = "../op-core" }
op-tools = { path = "../op-tools" }
op-introspection = { path = "../op-introspection" }
op-llm = { path = "../op-llm" }
regex = { workspace = true }
libc = { workspace = true }
op-agents = { path = "../op-agents" }

[dev-dependencies]
tokio-test = "0.4"
