[package]
name = "op-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for op-dbus-v2 system"

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }