[package]
name = "op-deployment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Container and image deployment management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }