[package]
name = "op-dynamic-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dynamic Tool Loading Enhancement - Complements existing MCP tool loading with intelligent caching and execution tracking"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
lru = { workspace = true }
anyhow = { workspace = true }

# Internal dependencies
op-core = { path = "../op-core" }
op-tools = { path = "../op-tools" }
op-execution-tracker = { path = "../op-execution-tracker" }
