[package]
name = "op-execution-tracker"
version = "0.1.0"
edition = "2021"
description = "MCP Execution Tracking Layer - Lightweight execution monitoring that complements existing state management"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
anyhow = "1.0"
async-trait = "0.1"
prometheus = "0.13"
lazy_static = "1.4"