[package]
name = "op-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Central HTTP/TLS server for all op-dbus modules"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "trace", "compression-gzip", "compression-br", "timeout"] }
hyper = { workspace = true }
hyper-util = { workspace = true }

# TLS
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

# Utils
chrono = { workspace = true }
gethostname = { workspace = true }
