[package]
name = "op-inspector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Inspector Gadget - Universal object inspector with AI gap-filling and Proxmox introspection"

[dependencies]
op-core = { workspace = true }
op-introspection = { path = "../op-introspection" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
quick-xml = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }