[package]
name = "op-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM provider integration with dynamic model discovery for HuggingFace and Ollama cloud"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
