[package]
name = "op-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM provider integration with dynamic model discovery for HuggingFace"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rsa = "0.9.9"
sha2.workspace = true
base64.workspace = true
jsonwebtoken = "9"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
