[package]
name = "op-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP Protocol Adapter for op-dbus-v2 - thin adapter that delegates to op-chat"

[[bin]]
name = "op-mcp-server"
path = "src/main.rs"

[dependencies]
op-chat = { workspace = true }
op-core = { workspace = true }
op-agents = { workspace = true }
op-tools = { workspace = true }
op-mcp-aggregator = { path = "../op-mcp-aggregator" }
tokio = { workspace = true, features = ["full", "signal"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
