[package]
name = "op-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for op-dbus"
license = "MIT"

[[bin]]
name = "op-mcp-server"
path = "src/main.rs"

[[bin]]
name = "op-mcp-compact-server"
path = "src/compact_main.rs"

[[bin]]
name = "op-mcp-agents-server"
path = "src/agents_main.rs"

[lib]
name = "op_mcp"
path = "src/lib.rs"

[dependencies]
op-core = { path = "../op-core" }
op-tools = { path = "../op-tools" }
op-introspection = { path = "../op-introspection" }
op-chat = { path = "../op-chat" }
op-mcp-aggregator = { path = "../op-mcp-aggregator" }
op-agents = { path = "../op-agents" }

anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "sync", "rt-multi-thread", "macros"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
