[package]
name = "op-mcp"
version = "0.4.0"
edition = "2021"
description = "Unified MCP Protocol Server with multiple transport and mode support"

[features]
default = ["grpc"]
grpc = ["tonic", "prost", "tonic-build"]
op-chat = ["dep:op-chat"]

[dependencies]
# Core
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# D-Bus (for agent executor)
zbus = "4.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# gRPC (optional)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# Internal crates
op-core = { path = "../op-core" }
op-tools = { path = "../op-tools" }
op-chat = { path = "../op-chat", optional = true }

[build-dependencies]
tonic-build = { version = "0.11", optional = true }

[[bin]]
name = "op-mcp-server"
path = "src/main.rs"

[[bin]]
name = "op-mcp-compact"
path = "src/compact_main.rs"
