[package]
name = "op-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native networking: OpenFlow (all versions, pure Rust), OVSDB JSON-RPC, rtnetlink, container networking"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
rtnetlink = { workspace = true }
log = { workspace = true }

# Netlink (Generic Netlink for OVS)
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3"
netlink-packet-utils = "0.5"
netlink-packet-route = "0.19"
byteorder = "1.5"

# Root privilege checking
libc = { workspace = true }
