[package]
name = "op-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "State management system with plugin infrastructure, crypto, and schema validation"

[dependencies]
op-core = { path = "../op-core" }
op-blockchain = { path = "../op-blockchain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
zbus = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
pocketflow_rs = "0.1"

[features]
default = []
mcp = []
