[package]
name = "op-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool registry and execution engine for op-dbus-v2"

[dependencies]
# Workspace crates
op-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
tracing = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
lru = { workspace = true }

# Additional dependencies
num_cpus = "1.16"
walkdir = "2"