[package]
name = "op-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Tool registry and execution for op-dbus-v2"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID for event IDs
uuid = { workspace = true }

# D-Bus for agent execution
zbus = { workspace = true }

# Internal dependencies
op-core = { path = "../op-core" }
op-introspection = { path = "../op-introspection" }
op-network = { path = "../op-network" }
op-http = { path = "../op-http" }

# Web
axum = { workspace = true }

# System info
op-state = { workspace = true }
lazy_static = { workspace = true }

# Async recursion for self-tools
async-recursion = "1.0"

[dev-dependencies]
tokio-test = "0.4"
