[package]
name = "op-web-ui"
version = "0.1.0"
edition = "2021"
description = "Leptos WASM UI for op-web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-wasm = "0.2"

[features]
default = []
hydrate = ["leptos/hydrate"]
